@@ -29,7 +29,7 @@ History
 * 4.0 planned Febuary 2013
 * 3.3 released March 2012
   
-For more information, about CONNECT's history see [HISTORY.md](./HISTORY.md)
+For more information, about CONNECT's history see [HISTORY.md](./CONNECT/HISTORY.md)
 
 Getting Started
 ---------------
@@ -46,7 +46,17 @@ Before you get started, you'll need the following installed and set up:
 
 ###Building from source
 To build all CONNECT modules from source, run: 
-        
+       
+Windows Users: 
+
+        $ set MAVEN_OPTS='-Xmx5000m -XX:MaxPermSize=1024m'
+
+OSX / Linux Users:
+
+        $ export MAVEN_OPTS='-Xmx5000m -XX:MaxPermSize=1024m'
+
+Everyone:
+
         $ cd <CONNECT_CLONE_DIR>
         $ mvn clean install 
 
